# wc-pred

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  mlflow.db  model.pkl  pyproject.toml  requirements.txt  serve.py
.github/workflows/: ci.yml
docs/: design.md
notebooks/: Untitled.ipynb  mlflow.db
tests/: test_data.py  test_features.py  test_model.py
wcpredictor/: __main__.py  features.py  predict.py  simulate.py  train.py
wcpredictor.egg-info/: PKG-INFO  SOURCES.txt
